--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "migration": "TZ=UTC ts-node src/migrations/index.ts",
     "prod:migration": "TZ=UTC node build/migrations/index.js",
     "seed": "TZ=UTC ts-node src/scripts/seed.ts",
-    "prod:seed": "TZ=UTC node build/scripts/seed.js"
+    "prod:seed": "TZ=UTC node build/scripts/seed.js",
+    "import:sirh": "TZ=UTC ts-node src/scripts/importFromSirhCsv.ts --file",
+    "prod:import:sirh": "TZ=UTC node build/scripts/importFromSirhCsv.js --file"
   },
   "keywords": [
     "express",
@@ -30,10 +32,12 @@
   "dependencies": {
     "@getbrevo/brevo": "^2.2.0",
     "@types/multer": "^1.4.12",
+    "@types/xlsx": "^0.0.35",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "csv-parse": "^6.1.0",
     "dotenv": "^16.4.7",
     "eslint": "^8.20.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -50,6 +54,7 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.6",
     "ts-node-dev": "^2.0.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
