--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "description": "Express TypeScript scaffolding with authentication",
   "dependencies": {
     "@getbrevo/brevo": "^2.2.0",
+    "@mailpace/mailpace.js": "^0.1.3",
     "@types/multer": "^1.4.12",
     "@types/xlsx": "^0.0.35",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
